--- a/app/src/styles/pages/_gifts.scss
+++ b/app/src/styles/pages/_gifts.scss
@@ -9,7 +9,7 @@
 
 .giftsContent {
   @include flex(column, center, center);
-  width: 80%;
+  width: 715px;
   padding: 10px;
   background-color: $white;
   border: 1px solid $blue;
