--- a/app/src/styles/pages/_ourStory.scss
+++ b/app/src/styles/pages/_ourStory.scss
@@ -18,7 +18,7 @@
 .ourStoryImg {
   width: auto;
   height: 390px;
-  border-radius: 1vh;
+  border-radius: 3px;
   border-top-right-radius: 0%;
   border-bottom-right-radius: 0%;
   border: 1px solid $blue;
@@ -31,7 +31,7 @@
   padding: 5px 10px;
   text-align: left;
   background-color: $white;
-  border-radius: 1vh;
+  border-radius: 3px;
   border-top-left-radius: 0%;
   border-bottom-left-radius: 0%;
   border: 1px solid $blue;
@@ -54,7 +54,7 @@
   }
   .ourStoryImg {
     border: 1px solid $blue;
-    border-radius: 1vh;
+    border-radius: 3px;
   }
   .detail {
     width: 80%;
